[package]
name = "bbr-settings-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
winreg = "0.52"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ansi_term = "0.12"
lazy_static = "1.4"